--- a/style.css
+++ b/style.css
@@ -62,15 +62,18 @@ body {
 
 .apresentacao_botoes {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: space-between;
+    gap: 20px;
 }
 
 .apresentacao_botoes_link {
-    background-color: var(--cor-primaria);
     width: 180px;
     text-align: center;
     border-radius: 16px;
-    color: black;
+    color: var(--cor-primaria);
+    border: 5px solid var(--cor-primaria);
     padding: 10px;
     text-decoration: none;
     font-size: 20px;
